challenges/web/ThisSeemsFamiliarChallenge/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    category: web
    challenge: this-seems-familiar
  name: this-seems-familiar
spec:
  replicas: 1
  selector:
    matchLabels:
      category: web
      challenge: this-seems-familiar
  strategy: {}
  template:
    metadata:
      labels:
        category: web
        challenge: this-seems-familiar
    spec:
      enableServiceLinks: false
      automountServiceAccountToken: false
      containers:
      - name: db
        image: mysql:8.0.21
        resources:
          limits:
            cpu: 100m
            memory: 500Mi
          requests:
            cpu: 10m
            memory: 100Mi
        args: ["--default-authentication-plugin=mysql_native_password"]
        imagePullPolicy: Always
        volumes: null

      - name: web
        image: gcr.io/hackmac-challenges-2020-13337/this-seems-familiar:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          limits:
            cpu: 100m
            memory: 500Mi
          requests:
            cpu: 10m
            memory: 100Mi
        labels:
        volumes: null
